[project]
name = "dvmss"
version = "0.0.1"
description = "Dynamic Vehicle Magnetic Sensor Simulation"
requires-python = ">=3.9"
dependencies = ["numpy", "metalpy", "pandas", "ppigrf", "loguru", "tqdm", "pooch"]
authors = [{ name = "dorian", email = "dorian.li@outlook.com" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"